@@ -1,3 +1,10 @@
+Mon Jun  6 10:54:45 2011  Shota Fukumori  <sorah@tubusu.net>
+
+	* lib/test/unit.rb(Test::Unit::Runner#puke):
+	  Add overriding from MiniTest::Unit#puke. This reverts minitest's fix
+	  that skip messages are hidden when not verbose mode (-v option).
+	  To hide skip messages, use --hide-skip option instead.
+
 Mon Jun  6 10:52:13 2011  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* lib/net/http.rb: don't use autoload.
